additional UI tweaks to prevent unnecessary scrollbars

--- a/chat/public/style.css
+++ b/chat/public/style.css
@@ -10,7 +10,7 @@ main {
 
 #chat-messages {
     min-height: 10vh;
-    height: 75vh;
+    height: 72vh;
     width: 100%;
     overflow-y: scroll;
 }
@@ -24,5 +24,5 @@ main {
 
 #sidenav {
   min-height: 10vh;
-  height: 84vh;
+  height: 82vh;
 }
